--- a/dir/Dockerfile
+++ b/dir/Dockerfile
@@ -11,4 +11,5 @@ RUN yum install -y httpd httpd-tools
 # Which port will be available for the container once deployed ?
 EXPOSE 8080
 # Which command will be execute at the container startup ?
+# / ! \ Il faut bien un espace entre chaque virgule et la suite, sinon j'ai l'impression que tout est collé et ça ne fonctionne pas.....
 CMD ["/usr/sbin/httpd", "-D", "FOREGROUND"]
