--- a/dir/Dockerfile
+++ b/dir/Dockerfile
@@ -1,15 +1,25 @@
 # Which image will we use to create our ?
 FROM centos:7
+
 # Directory where we will go
 WORKDIR /var/www/html
+
 # Copy the local content of the "build directory" of Openshift into the "WORKDIR"
 COPY . .
+
 # Some commande to try it
 RUN echo "toto" > /tmp/test.txt
 RUN touch /tmp/test_touch.txt
+
+# HTTPD install
 RUN yum install -y httpd httpd-tools
+
+# Right change as on Openshift we can't execute by default container with root uid, so we change the file rights to the container "root" as our user uid will be in this group
+RUN chgrp -R 0 /run && chmod -R g=u /run
+
 # Which port will be available for the container once deployed ?
 EXPOSE 8080
-# Which command will be execute at the container startup ?
+# Which command
+will be execute at the container startup ?
 # / ! \ Il faut bien un espace entre chaque virgule et la suite, sinon j'ai l'impression que tout est collé et ça ne fonctionne pas.....
 CMD ["/usr/sbin/httpd", "-D", "FOREGROUND"]
