--- a/dir/Dockerfile
+++ b/dir/Dockerfile
@@ -20,7 +20,7 @@ RUN chgrp -R 0 /run && chmod -R g=u /run
 
 # Change configuration to listen on port 8080 as openshift container can't use port bellow 1024
 RUN sed -i 's/Listen 80/Listen 8080/g' /etc/httpd/httpd.conf
-RUN /etc/httpd/httpd.conf
+RUN /etc/httpd/conf/httpd.conf
 
 # Which port will be available for the container once deployed ?
 EXPOSE 8080
